<resources>
    <string name="app_name">AndroidBrowser</string>
    <string name="action_settings">设置</string>
    <string name="webUrlHint">输入网址</string>
    <string name="webUrlGoto">打开</string>
    <string name="webUrlCancel">取消</string>
    <string name="url_prev">后退</string>
    <string name="url_next">前进</string>
    <string name="tools_button">工具</string>
    <string name="window_button">窗口</string>
    <string name="home_button">主页</string>
    <string name="refresh">刷新</string>
    <string name="url_divider">分割线</string>
    <string name="search">搜索</string>
    <string name="favorite">收藏</string>
    <string name="history">历史</string>
    <string name="modify_favorite_item">修改</string>
    <string name="delete_favorite_item">删除</string>
    <string name="name">标题</string>
    <string name="blank" />
    <string name="url">地址</string>
    <string name="delete_history_item">删除</string>
    <string name="delete_history_all">全部删除</string>
    <string name="viewImage">查看图片</string>
    <string name="saveImage">保存图片</string>
    <string name="drawImage">开始涂鸦</string>
    <string name="viewPropertiesOfImage">查看属性</string>
    <string name="shareImage">分享图片</string>
    <string name="file_name">文件名称</string>
    <string name="save_path">保存路径</string>
    <string name="default_path">默认路径</string>
    <string name="file_manager_item_icon">图标</string>
    <string name="file_manager_create_dir">新建</string>
    <string name="file_manager_title">选择存储目录</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="file_manager_item_delete_folder">删除</string>
    <string name="file_manager_item_rename_folder">重命名</string>
</resources>
