<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="7dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/image_hit_test_view_image"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:text="@string/viewImage"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="7dp"
        />

    <TextView
        android:id="@+id/image_hit_test_save_image"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:text="@string/saveImage"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="7dp"
        />

    <TextView
        android:id="@+id/image_hit_test_draw_image"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:text="@string/drawImage"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="7dp"
        />

    <TextView
        android:id="@+id/image_hit_test_view_properties_of_image"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:text="@string/viewPropertiesOfImage"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="7dp"
        />

    <TextView
        android:id="@+id/image_hit_test_share_image"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:text="@string/shareImage"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        />

</LinearLayout>