<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/file_manager_title"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@android:color/holo_blue_light"
        >

        <TextView
            android:id="@+id/file_manager_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_manager_title"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/file_manager_create_dir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_manager_create_dir"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            />
    </FrameLayout>
    <ListView
        android:id="@+id/file_manager_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/file_manager_title"
        android:layout_above="@+id/file_manager_toolbar"
        />
    <RelativeLayout
        android:id="@id/file_manager_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/tools_back"
        >
        <TextView
            android:id="@+id/file_manager_toolbar_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sure"
            android:textSize="17sp"
            android:textColor="@android:color/black"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            />

        <TextView
            android:id="@+id/file_manager_toolbar_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="17sp"
            android:textColor="@android:color/black"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            />

    </RelativeLayout>

</RelativeLayout>