<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/dialog_file_name"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/dialog_back"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_file_name_title"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/file_name"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/dialog_file_name_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:hint="@string/blank"
            android:singleLine="true" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/dialog_save_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/dialog_back"
        >

        <TextView
            android:id="@+id/dialog_save_path_title"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="15sp"
            android:text="@string/save_path"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            />

        <EditText
            android:id="@+id/dialog_save_path_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/default_path"
            android:text="@string/default_path"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:singleLine="true"
            />


    </LinearLayout>


</LinearLayout>